--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
 <body>
    <h1>Welcome to Home Page</h1>
+
+   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis facere laudantium itaque recusandae impedit harum in inventore dignissimos? Reprehenderit minima officia numquam quia aut omnis accusantium nemo veritatis neque odit?</p>
 </body>
 
 </html>
