change to index.html

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Home page</title>
+   <title>Index page</title>
 </head>
 
 <body>
-   <h1>Welcome to Home Page</h1>
+   <h1>Welcome to Index Page</h1>
 
    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis facere laudantium itaque recusandae impedit harum in inventore dignissimos? Reprehenderit minima officia numquam quia aut omnis accusantium nemo veritatis neque odit?</p>
 </body>
