--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
    <h1>Welcome to Index Page</h1>
 
-   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis facere laudantium itaque recusandae impedit harum in inventore dignissimos? Reprehenderit minima officia numquam quia aut omnis accusantium nemo veritatis neque odit?</p>
+   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis facere laudantium itaque recusandae impedit harum in inventore dignissimos? Reprehenderit minima officia numquam quia aut omnis accusantium nemo veritatis neque odit? - test 2</p>
 </body>
 
 </html>
