--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-
+   <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusantium beatae consectetur aut voluptatum doloribus iusto, optio nihil hic porro praesentium molestias dolorum commodi quae corrupti eum repudiandae dolorem a odio.</p>
 </body>
 
 </html>
