--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Index page</title>
+   <title>Home page</title>
 </head>
 
 <body>
-   <h1>Welcome to Index Page</h1>
+   <h1>Welcome to Home Page</h1>
 
-   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis facere laudantium itaque recusandae impedit harum in inventore dignissimos? Reprehenderit minima officia numquam quia aut omnis accusantium nemo veritatis neque odit? - test 2</p>
+   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis facere laudantium itaque recusandae impedit harum in inventore dignissimos? Reprehenderit minima officia numquam quia aut omnis accusantium nemo veritatis neque odit?</p>
+   <p>This message is from master branch...</p>
 </body>
 
 </html>
